<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MenuActivity"
    android:background="@color/background"
    >



        <ImageView
            android:id="@+id/logo"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:layout_marginTop="50dp"

            android:layout_marginBottom="75dp"


            android:layout_gravity="center"

            />

        <Button
            android:id="@+id/new_game"

            style="@style/menu_button"

            android:text="@string/start_game_person"

            android:padding="15dp"

            android:layout_below="@id/logo"

            />

        <Button
            android:id="@+id/new_game_bot"

            style="@style/menu_button"

            android:text="@string/start_game_bot"

            android:padding="15dp"

            android:layout_below="@id/new_game"

            />

        <Button
            android:id="@+id/game_history"

            style="@style/menu_button"

            android:padding="10dp"

            android:text="@string/game_history"

            android:layout_below="@id/new_game_bot"

            android:backgroundTint="@color/blue"



            />


</RelativeLayout>